updated package to dayjs and added feature to helpers and some handlebars files

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "bugs": {
     "url": "https://github.com/andreahergert/motivation_station/issues"
   },
-  "homepage": "https://github.com/andreahergert/motivation_station#readme"
+  "homepage": "https://github.com/andreahergert/motivation_station#readme",
+  "dependencies": {
+    "dayjs": "^1.11.6"
+  }
 }
